<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="hu.newtonsapple.andor.OptionsActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/backArrow"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:src="@drawable/ic_back" />

            <TextView
                android:id="@+id/settings_title"
                style="@style/textStyle"
                android:layout_width="match_parent"
                android:gravity="center"
                android:text="@string/settings"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="5dp"
            android:background="#444444" />
    </LinearLayout> <!-- Header -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/vibrateTV"
            style="@style/textStyle"
            android:text="@string/vibration"
            android:textColor="@color/colorAccent" />

        <TextView
            android:id="@+id/tabletTV"
            style="@style/textStyle"
            android:layout_gravity="center"
            android:text=""
            android:textColor="@color/colorAccent"
            android:textSize="14sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="end">

            <com.rm.rmswitch.RMSwitch
                android:id="@+id/vibrate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:checked="false"
                app:enabled="true"
                app:forceAspectRatio="false"
                app:switchBkgCheckedColor="@color/red_btn_bg_color"
                app:switchBkgNotCheckedColor="#444444"
                app:switchDesign="large"
                app:switchToggleCheckedColor="@color/button_text_color"
                app:switchToggleNotCheckedColor="@color/button_text_color" />

        </LinearLayout>
    </LinearLayout> <!-- Vibrate layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:paddingTop="32dp">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/inputTV"
                style="@style/textStyle"
                android:layout_width="wrap_content"
                android:text="@string/input"
                android:textColor="@color/colorAccent" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">

                <RadioButton
                    android:id="@+id/arrows"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="true"
                    android:text="@string/arrows"
                    android:textSize="24sp" />

                <RadioButton
                    android:id="@+id/sensor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="8dp"
                    android:text="@string/sensor"
                    android:textSize="24sp" />

            </RadioGroup>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="end"
            android:orientation="vertical">

            <TextView
                android:id="@+id/sensTV"
                style="@style/textStyle"
                android:layout_width="wrap_content"
                android:layout_weight="1"
                android:text="@string/sens"
                android:textColor="@color/colorAccent" />

            <org.adw.library.widgets.discreteseekbar.DiscreteSeekBar
                android:id="@+id/sensBar"
                android:layout_width="180dp"
                android:layout_height="wrap_content"
                app:dsb_indicatorColor="@color/red_btn_bg_color"
                app:dsb_max="8"
                app:dsb_min="1"
                app:dsb_progressColor="#FFFFFF"
                app:dsb_rippleColor="#FFFFFF"
                app:dsb_trackColor="@color/red_btn_bg_color"
                app:dsb_trackHeight="5dp" />
        </LinearLayout> <!-- Input sensitivity -->
    </LinearLayout> <!-- Input layout -->
</LinearLayout> <!-- Panels -->